--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -139,9 +139,9 @@
     "\n",
     "$$p(x_n | \\pi, \\mu, \\sigma) = \\sum_{i=1}^K \\pi_k \\text{Normal}(x_n | \\mu_k, \\sigma^2_k)$$\n",
     "\n",
-    "In the image segmentation task, we treat each pixel, which is a 3-D vector containing its RGB color value, as $x_n$, where the value are integers ranging from 0 to 255.\n",
+    "In the image segmentation task, we treat each pixel, a 3-D vector containing its RGB color value, as $x_n$, where the value are integers ranging from 0 to 255.\n",
     "\n",
-    "To fully specify the models, we need to choose cluster number and the prior parameter."
+    "To fully specify the model, we need to choose the cluster number and the prior parameter."
    ]
   },
   {
@@ -181,7 +181,7 @@
    "source": [
     "Note that the histogram is plot independently for the 3 RGB channels, while what we want is to cluster pixels based on a combination of 3 channels. Hence it only roughly gives us a sense of how many clusters there should be.\n",
     "\n",
-    "It seems like there are 8 clusters in the color histogram. So we make:"
+    "It seems like there are 9 clusters in the color histogram. So we make:"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "source": [
     "## Inference\n",
     "\n",
-    "We will compare inference results from MCMC (Gibbs sampling) and ADVI."
+    "In this part, we make inference via MCMC (Gibbs sampling) and ADVI."
    ]
   },
   {
@@ -386,7 +386,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We plot the loss function, where loss = - ELBO, to assess convergence. As we could see above, the loss is noisy, but in general, decreasing."
+    "We plot the loss function, where loss = - ELBO, to assess convergence. As we could see above, the loss is noisy, but in general, decreasing.\n",
+    "\n",
+    "Apparently, ADVI takes much less time than MCMC."
    ]
   },
   {
@@ -403,7 +405,8 @@
     "\n",
     "- assign each pixel to the most probable cluster\n",
     "- set the RGB value of pixels in the same cluster to the RGB value of the cluster center.\n",
-    "\n"
+    "\n",
+    "Hence, there are two aspects from which we could evaluate the inference result: the segmentation (clustering assignment) and the color disply (the RGB value of posterior cluster center $\\mu_k$)."
    ]
   },
   {
@@ -492,7 +495,7 @@
    "source": [
     "ADVI's segmentation result is bad with only four clusters are assigned. Moreover, the RGB values of all identified cluster centers are almost identical.\n",
     "\n",
-    "Considering the randomness, we have ran several experiments with different seed. For the results, the number of identified clusters ranges from 1 to 4 (mostly 1), and the resulting images are all grey.\n",
+    "Considering the randomness, we have ran several experiments of ADVI with different seed. The results show that the number of identified clusters ranges from 1 to 4 (mostly 1), and the segmented images are all grey.\n",
     "\n",
     "#### Why ADVI fails?\n",
     "\n",
@@ -528,10 +531,10 @@
    "source": [
     "As shown above, the posterior distributions of the cluster centers, $\\mu_k$, are very close. Moreover, the posterior means of $\\mu_k$ are all centered around 125-127, which is very close to the prior mean. That is why we see an all-grey segmented image.  \n",
     "\n",
-    "One possible reason is that ADVI is sensitive to the shared prior setting, hence the optimization process is stuck at a local optimum, leading to the \"mode collapse\".\n",
+    "One possible reason is that ADVI is sensitive to the shared prior setting, hence the optimization process is stuck at a local optimum, leading to the \"mode collapse\", that is, all the posterior distributions of $\\mu_k$ collapse to one distribution which is centered around the prior mean.\n",
     "\n",
     "#### Solution\n",
-    "To fix this issue for ADVI, we try a new prior: \n",
+    "To fix this issue for ADVI, we try a different prior parameters of cluster center $\\mu_k$: \n",
     "\n",
     "For $k\\in 1: K$, $\\mu_k \\sim \\text{Normal}(\\alpha_k, \\beta_k)$, \n",
     "\n",
@@ -773,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we could see from above, by setting different prior for cluster means, MCMC obstains more clusters."
+    "As we could see from above, MCMC's segmentation result does not vary much by switching shared prior to different prior. Moreover, MCMC achieves a rather good segmentation image using the shared prior. In this aspect, MCMC is robust to the prior setting."
    ]
   },
   {
@@ -843,9 +846,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, the segmented image seems much better than the previous all-grey one, with 5 clusters identified. Hence the different prior setting does help.\n",
+    "Now, the segmented image seems much better than the previous all-grey one, with 5 clusters identified. Hence the different-prior setting does help.\n",
     "\n",
-    "However, the number of clusters identified by ADVI is less than that of MCMC. Moreover, in terms of the color display, which indicates the value of posterior cluster center, MCMC's result is closer to the truth."
+    "However, the number of clusters identified by ADVI is less than that of MCMC. Moreover, in terms of the color display, which indicates the RGB value of posterior cluster center, MCMC's result is closer to the truth."
    ]
   },
   {
@@ -884,8 +887,8 @@
    "source": [
     "#### How to get a better ADVI segmentation result?\n",
     "\n",
-    "- Increase $K$\n",
-    "- Fine tune the prior"
+    "- Increase the number of clusters $K$ to get more posterior idenfitied clusters.\n",
+    "- Fine tune the prior to get more accurate posterior cluster center $\\mu_k$."
    ]
   },
   {
@@ -894,14 +897,14 @@
    "source": [
     "### 2. Clustering metric: comparing to the groud truth\n",
     "\n",
-    "In this section, we will compare the MCMC/ADVI-segmented results with human-segmented results, which is referred as \"ground truth\".\n",
+    "In this section, we will compare the MCMC/ADVI-segmented results with human-segmented results, which is referred as the \"ground truth\". We will call them inference segmentation and ground-truth/human segmentation in the following context.\n",
     "\n",
     "First, let's look at the ground truth provided by the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will use several common metrics to compare the agreement of two different cluster assginments, where one is the inference result (MCMC/ADVI), and another is human segmentataion."
+    "Now, we will use several common metrics to compare the agreement of two different cluster assginments, where one is the human segmentataion, and another is inference result (MCMC/ADVI)."
    ]
   },
   {
@@ -969,7 +972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Metric/Inference | MCMC | ADVI |\n",
+    "| Metric \\ Inference | MCMC | ADVI |\n",
     "| --- | :---: | --- |\n",
     "| Homogeneity |  ✔️ | ✘ |\n",
     "| Completeness |  ✘| ✔️ |\n",
@@ -984,32 +987,19 @@
    "source": [
     "#### Interpreting and comparing metric results\n",
     "\n",
-    "- **Homogeneity:** Ideally each of our cluster shall not contain multiple ground truth classes. \n",
-    "- **Completeness:** Ideally points from a single ground truth class shall not be assigned to multiple clusters.\n",
-    "- **V-measure:** a measure that combines above homogenity and completeness. \n",
-    "- **Adjusted Rand. Index:** Ideally a pair of points that are in the same class shall also be identified in the same cluster (True Positive); and points not in the same class shall not be in the same cluster (True Negative). \n",
-    "- **Adjusted Mutual Information:**\n",
+    "- **Homogeneity:** Ideally each of the inference segments should only contain pixels that belong to one ground-truth segment. \n",
+    "- **Completeness:** Ideally each of the inference segment should contain all pixels that belong to one ground-truth segment.\n",
+    "- **V-measure:** a measure that combines above homogenity and completeness (the harmonic mean actually).\n",
+    "- **Adjusted Rand. Index:** Ideally any pair of pixels that are in the ground-truth segment should also be in the same inference segment (True Positive); and any pair of pixles not in the same ground-truth segment should not be in the same inference segment (True Negative). \n",
+    "- **Adjusted Mutual Information:** If two segmentations contain no information about one another, then AMI=0; if they constain perfect information about one another, then AMI=1.\n",
     "\n",
-    "Notes: Why adjusted? \n",
+    "First, we should point out that these metrics only indicate the agreements between the inference segmentation and the human segmentation, while ignoring the agreement in color display.\n",
     "\n",
-    "For unadjusted measure such as Rand Index or Mutual Information, the value tends to be larger when the two cluster assginments have larger number of clusters. Adjusted measure sets a baseline -- random clustering will receive a score of 0. It provides a consensus index to evaluate the average stability of clustering algorithm."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Reflection:\n",
+    "As we could see from the comparison table, MCMC only outperforms ADVI in Homogeneity. This is because that MCMC gives a much finer result than the human segmentation. For example, in human segmented image, the whole sky is one segment, while MCMC differentiates different segments from the sky according to the changes in color, while ignoring the semantic meaning.\n",
     "\n",
-    "TODO:\n",
+    "#### How to imrove MCMC in terms of clustering metrics?\n",
     "\n",
-    "For MCMC, it is too accurate.\n",
-    "\n",
-    "- Use a shared prior\n",
-    "\n",
-    "- Reduce $K$.\n",
-    "\n",
-    "( insert an image here)"
+    "- Reduce the number of clusters $K$ to avoid over-segmentation.\n"
    ]
   },
   {
@@ -1018,7 +1008,7 @@
    "source": [
     "### 3. PSIS-diagnostic\n",
     "\n",
-    "PSIS is a method to diagnose Variatioanl Inference.\n",
+    "PSIS is a method to diagnose variational inference.\n",
     "\n",
     "The process is:\n",
     "\n",
@@ -1140,14 +1130,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualize and compare"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1. Density distribution"
+    "### 1). Visualize and compare\n",
+    "\n",
+    "#### a. Density distribution"
    ]
   },
   {
@@ -1204,16 +1189,16 @@
     "- for the same type of index, the density distributions inferred by MCMC and ADVI are similar.\n",
     "- The distributions of the last three index are all left-skewed.\n",
     "\n",
-    "Note that the scale of index value differs much from MCMC to ADVI. This is due to the implementation of log-likelihood which is up to a constant to the true one."
+    "Note: the scale of index value differs much from MCMC to ADVI. This is due to that the implementation of log-likelihood is up to a constant to the true one."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Heatmap\n",
+    "#### b. Heatmap\n",
     "\n",
-    "In this part, we plot a heatmap to visualize the index values, where the \"heat value\" of each pixel is set to its index value. In the 2-D case, we find that low index values indicate outliers. Hence, in the segmentation task, we expect low \"heat\" (darker color) appears in the margin between different segments."
+    "In this part, we plot a heatmap to visualize the index values, where the \"heat value\" of each pixel is set to its index value. In the 2-D case, we find that low index values indicate outliers. Hence, in the segmentation task, we expect low \"heat\" pixels (that of darker color) appear in the margin between different segments."
    ]
   },
   {
@@ -1266,26 +1251,26 @@
    "source": [
     "Observations:\n",
     "\n",
-    "- In both the MCMC and ADVI inferred results, the heatmaps \"reveals\" the segmented result. That is, pixels belong to the same segment have index values in the same level.\n",
-    "- We"
+    "- In both the MCMC and ADVI inferred results, the heatmaps \"reveal\" the segmented result. That is, pixels belong to the same segment have index values in the same level.\n",
+    "- __Darker-colored pixels tend to appear near the margins between segments.__"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intrepreting PDI\n",
+    "### 2). Intrepretation of indice -- more examples\n",
     "\n",
-    "We need to run experiments on more image to validate our intuitions of what PDI and WAPDI suggest.\n",
+    "We need to run experiments on more image to validate and get more intuitions of what those indice suggest.\n",
     "\n",
     "Setting: for computation consideration, we use ADVI as inference method. For all experiments on different images, we the same prior setting as in the reset model, and set $K=20$. So the model is not fine-tuned according to the specific image. All the output images could be found in \"../out\" folder.\n",
     "\n",
-    "### 1. Density distribution\n",
+    "#### a. Density distribution\n",
     "- PDI density distribution is very spiky, hence we turn to log-PDI (note that the log transformation is monotone). \n",
-    "- For the index that are negative-valued (log-PDI, PDI-log and WAPDI), the density distributions are all left-skewed.\n",
-    "- If we believe that most of datapoints are matched well, with a few outliers, then a left-skewed distribution reveals that datapoints with index value close to 0, match the model well.\n",
+    "- For the index that are negative-valued (log-PDI, PDI-log and WAPDI), the density distributions are mostly left-skewed.\n",
+    "- __If we believe that most of datapoints are matched well, and only a few are outliers, then a left-skewed distribution reveals that datapoints with index value close to 0, match the model well.__\n",
     "\n",
-    "### 2. Heatmap"
+    "#### b. Heatmap"
    ]
   },
   {
@@ -1341,13 +1326,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The observations are consistent with the example above:\n",
+    "- The heatmaps \"reveal\" the segmentation, expecially pdi-log and wapdi, while the distributions of pdi and log-pdi are very spiky thereby leading to a black-and-white heatmap.\n",
+    "- In the heatmaps of pdi-log and wapdi, darker-colored pixels tend to outline the margin of segments, or appear in the regions divided into many small segmentes.\n",
+    "- In terms of outlining the margin or detecting outliers, wapdi does a better job than pdi-log -- most of pixels have wapdi value close to 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusions\n",
     "\n",
-    "- Different prior setting for $\\mu_k$ is better than the shared prior setting.\n",
+    "- Prior setting\n",
+    "    - MCMC is robust to prior setting, while ADVI is sensitive.\n",
+    "    - A different-prior setting boosts ADVI's segmentation performance.\n",
     "\n",
-    "- MCMC outperforms ADVI in segmentation results.\n",
+    "- Segmentation results\n",
+    "    - Using the same cluster number $K=9$, MCMC identify all 9 clusters while ADVI collapses to 5.\n",
+    "    - In terms of infering value of posterior cluster centers, MCMC is better than ADVI.\n",
+    "    - However, due to the large $K$ setting, MCMC over-segments the image compared to the ground-truth.\n",
     "\n",
-    "- Computation time for ADVI is much less than MCMC."
+    "- Computation time\n",
+    "    - ADVI is much less than MCMC.\n",
+    "\n",
+    "- PDI\n",
+    "    - Indicates \"outliers\"\n",
+    "\n",
+    "- PSIS\n",
+    "    - Is not suitable for our task.\n",
+    "    - Perhaps due to the large scale dataset and the i.i.d. data assumption."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Future directions\n",
+    "- Model\n",
+    "    - Add location dependencies between pixels.\n",
+    "    - Try a Dirichlet process GMM so we do not need to pre-select $K$.\n",
+    "- Semantic segmentation\n",
+    "    - The GMM we use is a color-based segmentation model. However, many real-world tasks requires semantic segmentation.\n",
+    "- More on PDI\n",
+    "    - On the current few examples we run, we find that the variance MCMC-inferred log-pdi/wapdi density distribution is smallter than ADVI, which may suggest that the outliers identified by MCMC is less than that by ADVI. Does this imply that MCMC gives a better segmentation than ADVI? Need to run more experiments."
    ]
   },
   {
@@ -1366,13 +1388,6 @@
     "\n",
     "[[PSIS2018](https://arxiv.org/pdf/1802.02538.pdf)] Yuling Yao, Aki Vehtari, Daniel Simpson, Andrew Gelman,  \tarXiv:1802.02538 [stat.ML]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
