--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -495,7 +495,7 @@
    "source": [
     "ADVI's segmentation result is bad with only four clusters are assigned. Moreover, the RGB values of all identified cluster centers are almost identical.\n",
     "\n",
-    "Considering the randomness, we have ran several experiments of ADVI with different seed. The results show that the number of identified clusters ranges from 1 to 4 (mostly 1), and the segmented images are all grey.\n",
+    "Considering the randomness, we have run several experiments of ADVI with different seed. The results show that the number of identified clusters ranges from 1 to 4 (mostly 1), and the segmented images are all grey.\n",
     "\n",
     "#### Why ADVI fails?\n",
     "\n",
@@ -534,7 +534,7 @@
     "One possible reason is that ADVI is sensitive to the shared prior setting, hence the optimization process is stuck at a local optimum, leading to the \"mode collapse\", that is, all the posterior distributions of $\\mu_k$ collapse to one distribution which is centered around the prior mean.\n",
     "\n",
     "#### Solution\n",
-    "To fix this issue for ADVI, we try a different prior parameters of cluster center $\\mu_k$: \n",
+    "To fix this issue for ADVI, we try different prior parameters of cluster center $\\mu_k$: \n",
     "\n",
     "For $k\\in 1: K$, $\\mu_k \\sim \\text{Normal}(\\alpha_k, \\beta_k)$, \n",
     "\n",
