--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -43,7 +43,7 @@
     "import os\n",
     "codebase = '../'\n",
     "sys.path.append(codebase)\n",
-    "from src.utils import get_segment_img, predict_cluster, plot_seg_vs_truth, cluster_metric, PSIS, PDI, plot_pdi_wapdi"
+    "from src.utils import get_segment_img, predict_cluster, plot_seg_vs_truth, cluster_metric, PDI, plot_pdi_wapdi"
    ]
   },
   {
@@ -54,18 +54,18 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Image segmentation is a widely used technique in computer vision. It enables us to extract useful piece of information from an image by dividing it into several meaningful regions, within which pixels share similar nature. In this notebook, we focus on segmentation-based clustering. We align our procedure with [Box's Loop](https://www.jstor.org/stable/2286841?seq=1#metadata_info_tab_contents) by first building Gaussian mixture model, then making inference with MCMC and ADVI [[advi2016](https://arxiv.org/pdf/1603.00788.pdf)] and finally evaluating our segmentation result through both Bayesian criticism and task-specific criteria.  \n",
+    "Image segmentation is a widely-used technique in computer vision. It enables us to extract useful information from an image by dividing it into several regions. In this notebook, we focus on color-based clustering to perform segmentation. We go through [[Box's Loop](https://www.jstor.org/stable/2286841?seq=1#metadata_info_tab_contents)] by first building Gaussian mixture model, then making inference with MCMC and ADVI [[advi2016](https://arxiv.org/pdf/1603.00788.pdf)] and finally evaluating our segmentation result through Bayesian criticism and task-specific criteria.  \n",
     "\n",
     "## Dataset\n",
     "\n",
-    "Our data comes from [the Berkeley Segmentation Dataset and Benchmark](https://www2.eecs.berkeley.edu/Research/Projects/CS/vision/bsds/), which contains color image and human-labelled segmentation results.\n",
+    "Our data comes from [The BSD500](https://www2.eecs.berkeley.edu/Research/Projects/CS/vision/bsds/), which contains both images and hand-labeled segmentations.\n",
     "\n",
-    "First, let's look at an example image which we will use to walk through the Box's Loop."
+    "First, let's look at the example image."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,6 @@
     }
    ],
    "source": [
-    "# Read data\n",
     "train_path = \"../BSR/BSDS500/data/images/train/\"\n",
     "img_no = 2092\n",
     "img = plt.imread(train_path+\"{0:d}.jpg\".format(img_no))\n",
@@ -111,7 +110,6 @@
     }
    ],
    "source": [
-    "# Flatten the pixel matric to 2-d array\n",
     "X = img.reshape(-1, 3).astype(int)\n",
     "N, D = X.shape\n",
     "print(\"flatten pixel matrix shape:\", X.shape)"
@@ -148,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting the number of clusters $K$\n",
+    "### 1. Setting the number of clusters $K$\n",
     "\n",
     "First, we need to specify the number of clusters $K$. A common way to pre-select $K$ is by observing the color histogram."
    ]
@@ -197,11 +195,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting the prior\n",
+    "### 2. Setting the prior\n",
     "\n",
-    "Initializing mixture models is always a challenge. In terms of the dirichlet priors for mixing probability $\\pi$, $\\alpha$ encodes the prior belief in the level of concentration of pixels among clusters. For the prior of cluster center $\\mu_k$, we hope that it could spread over the RGB value space -- [0,255].\n",
+    "Initializing mixture models is always a challenge. In terms of the dirichlet prior for mixing probability $\\pi$, $\\alpha$ encodes the prior belief in the level of concentration of pixels among clusters. For the prior of cluster center $\\mu_k$, we hope that it could spread over the RGB value space -- [0,255].\n",
     "\n",
-    "In the following experiments, we set $\\alpha=1$ and $a=1, b=1$, and we will mainly focus on different prior settings for the cluster center -- $\\mu_k$.\n",
+    "In the following experiments, we set $\\alpha=1$ and $a=1, b=1$, and __we will mainly focus on tuning the prior setting for the cluster center $\\mu_k$__.\n",
     "\n",
     "First, we try a shared prior for all cluster centers, that is $\\mu_k \\sim \\text{Normal}(127, 80^2)$."
    ]
@@ -272,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T = 1000  # number of MCMC samples\n",
+    "T = 1000  # number of samples\n",
     "with tf.name_scope(\"posterior\"):\n",
     "    qpi = Empirical(tf.get_variable(\"qpi/params\", [T, K],initializer=tf.constant_initializer(1.0/K)))\n",
     "    qmu = Empirical(tf.get_variable(\"qmu/params\", [T, K, D],initializer=tf.zeros_initializer()))\n",
@@ -377,18 +375,14 @@
     "with model:\n",
     "    advi = pm.ADVI()\n",
     "    %time advi.fit(10000, more_replacements={X_shared: X_minibatch},obj_optimizer= pm.adagrad(learning_rate=1e-2))\n",
-    "plt.plot(advi.hist);\n",
-    "# to run for more iterations we could do\n",
-    "# advi.refine(5000)"
+    "plt.plot(advi.hist);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We plot the loss function, where loss = - ELBO, to assess convergence. As we could see above, the loss is noisy, but in general, decreasing.\n",
-    "\n",
-    "Apparently, ADVI takes much less time than MCMC."
+    "The loss (=-ELBO) curve is noisy, but in general, decreasing."
    ]
   },
   {
@@ -404,9 +398,7 @@
     "We obtain the segmented image as follows:\n",
     "\n",
     "- assign each pixel to the most probable cluster\n",
-    "- set the RGB value of pixels in the same cluster to the RGB value of the cluster center.\n",
-    "\n",
-    "Hence, there are two aspects from which we could evaluate the inference result: the segmentation (clustering assignment) and the color disply (the RGB value of posterior cluster center $\\mu_k$)."
+    "- set the RGB value of the pixel to the RGB value of its assigned cluster center."
    ]
   },
   {
@@ -529,14 +521,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As shown above, the posterior distributions of the cluster centers, $\\mu_k$, are very close. Moreover, the posterior means of $\\mu_k$ are all centered around 125-127, which is very close to the prior mean. That is why we see an all-grey segmented image.  \n",
+    "As shown above, the posterior distributions of the cluster centers, $\\mu_k$, collapse to one distribution which is centered around the prior mean - 127.\n",
     "\n",
-    "One possible reason is that ADVI is sensitive to the shared prior setting, hence the optimization process is stuck at a local optimum, leading to the \"mode collapse\", that is, all the posterior distributions of $\\mu_k$ collapse to one distribution which is centered around the prior mean.\n",
+    "One possible reason is that ADVI is sensitive to the shared prior setting, hence the optimization process is stuck at a local optimum, leading to the \" collapse\". \n",
     "\n",
     "#### Solution\n",
-    "To fix this issue for ADVI, we try different prior parameters of cluster center $\\mu_k$: \n",
+    "To fix this issue for ADVI, we try a different prior setting of $\\mu_k$: \n",
     "\n",
-    "For $k\\in 1: K$, $\\mu_k \\sim \\text{Normal}(\\alpha_k, \\beta_k)$, \n",
+    "$$\\text{For }k\\in 1: K, \\quad \\mu_k \\sim \\text{Normal}(\\alpha_k, \\beta_k),$$\n",
     "\n",
     "where $\\alpha_{k,i}$ is randomly picked from 20-230 for $i=0,1,2$, and $\\beta_k$ is set to $20$ for all $k$. \n",
     "\n",
@@ -1006,59 +998,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. PSIS-diagnostic\n",
-    "\n",
-    "PSIS is a method to diagnose variational inference.\n",
-    "\n",
-    "The process is:\n",
-    "\n",
-    "- sample ($\\theta_s, s=1:S$) from $q(\\theta)$\n",
-    "\n",
-    "- calculate the importance ratio $r_s = p(\\theta_s, y) / q(\\theta)$\n",
-    "\n",
-    "- Fit generatlized pareto distribution to $M$ largest $r_s$, report the shape parameter $k$.\n",
-    "\n",
-    "- If $k<0.7$, conclude VI is good; else, warn users that VI is not reliable, and suggest using MCMC."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([inf])"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_, k = PSIS(advi.approx, 1000)\n",
-    "k"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Reflection:\n",
-    "\n",
-    "Generally, an infinite $k$ value suggests that the posterior inference is far away from the truth posterior. This is reasonable, as we can tell from the color disply of the ADVI-segmented image that the posterior $\\mu_k$ is not close to the ground truth.\n",
-    "\n",
-    "However, there might be other reasons leading to the infinite $k$. We dig into this by comparing the value of the posterior model likelihood $p(\\theta_s, y)$, and the variational distribution $q(\\theta_s)$, and it turns ot that $p(\\theta_s, y)$ is way less than $q(\\theta_s)$. The very small model likelihood is probably due to the i.i.d. data assumption and the scale of our dataset (15440 datapoints).\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. PDI\n",
+    "### 3. PDI\n",
     "\n",
     "$$\\text{PDI}(n) = \\frac{\\sigma^2 (n)}{\\mu (n)}  \\qquad \\text{PDI-log}(n) = \\frac{\\sigma^2_{\\log} (n)}{\\mu_{\\log} (n)} \\qquad \n",
     "\\text{WAPDI}(n) = \\frac{\\sigma^2_{\\log}(n)}{\\log \\mu (n)}$$\n",
@@ -1261,12 +1201,12 @@
    "source": [
     "### 2). Intrepretation of indice -- more examples\n",
     "\n",
-    "We need to run experiments on more image to validate and get more intuitions of what those indice suggest.\n",
+    "We need to run experiments on more image to validate interpretate those indice.\n",
     "\n",
     "Setting: for computation consideration, we use ADVI as inference method. For all experiments on different images, we the same prior setting as in the reset model, and set $K=20$. So the model is not fine-tuned according to the specific image. All the output images could be found in \"../out\" folder.\n",
     "\n",
     "#### a. Density distribution\n",
-    "- PDI density distribution is very spiky, hence we turn to log-PDI (note that the log transformation is monotone). \n",
+    "- PDI density distribution is very spiky, hence we turn to log-PDI. \n",
     "- For the index that are negative-valued (log-PDI, PDI-log and WAPDI), the density distributions are mostly left-skewed.\n",
     "- __If we believe that most of datapoints are matched well, and only a few are outliers, then a left-skewed distribution reveals that datapoints with index value close to 0, match the model well.__\n",
     "\n",
@@ -1328,8 +1268,8 @@
    "source": [
     "The observations are consistent with the example above:\n",
     "- The heatmaps \"reveal\" the segmentation, expecially pdi-log and wapdi, while the distributions of pdi and log-pdi are very spiky thereby leading to a black-and-white heatmap.\n",
-    "- In the heatmaps of pdi-log and wapdi, darker-colored pixels tend to outline the margin of segments, or appear in the regions divided into many small segmentes.\n",
-    "- In terms of outlining the margin or detecting outliers, wapdi does a better job than pdi-log -- most of pixels have wapdi value close to 0."
+    "- In the heatmaps of pdi-log and wapdi, darker-colored pixels tend to outline the margin of segments, or appear in the regions divided into many small segments.\n",
+    "- In terms of outlining the margin, wapdi does a better job than pdi-log -- most of pixels have wapdi value close to 0."
    ]
   },
   {
@@ -1351,25 +1291,7 @@
     "    - ADVI is much less than MCMC.\n",
     "\n",
     "- PDI\n",
-    "    - Indicates \"outliers\"\n",
-    "\n",
-    "- PSIS\n",
-    "    - Is not suitable for our task.\n",
-    "    - Perhaps due to the large scale dataset and the i.i.d. data assumption."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Future directions\n",
-    "- Model\n",
-    "    - Add location dependencies between pixels.\n",
-    "    - Try a Dirichlet process GMM so we do not need to pre-select $K$.\n",
-    "- Semantic segmentation\n",
-    "    - The GMM we use is a color-based segmentation model. However, many real-world tasks requires semantic segmentation.\n",
-    "- More on PDI\n",
-    "    - On the current few examples we run, we find that the variance MCMC-inferred log-pdi/wapdi density distribution is smallter than ADVI, which may suggest that the outliers identified by MCMC is less than that by ADVI. Does this imply that MCMC gives a better segmentation than ADVI? Need to run more experiments."
+    "    - Indicates \"outliers\""
    ]
   },
   {
@@ -1384,9 +1306,7 @@
     "\n",
     "[[advi2016](https://arxiv.org/pdf/1603.00788.pdf)] Alp Kucukelbir, Dustin Tran, Rajesh Ranganath, Andrew Gelman, David M. Blei,  \tarXiv:1603.00788 [stat.ML]\n",
     "\n",
-    "[[PDI2016](https://arxiv.org/pdf/1605.07604.pdf)] Alp Kucukelbir, David M. Blei, arXiv:1605.07604 [stat.ML]\n",
-    "\n",
-    "[[PSIS2018](https://arxiv.org/pdf/1802.02538.pdf)] Yuling Yao, Aki Vehtari, Daniel Simpson, Andrew Gelman,  \tarXiv:1802.02538 [stat.ML]"
+    "[[PDI2016](https://arxiv.org/pdf/1605.07604.pdf)] Alp Kucukelbir, David M. Blei, arXiv:1605.07604 [stat.ML]"
    ]
   }
  ],
